--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,12 @@ pipeline {
             }
         }
         stage('Test') {
+            when {
+            expression{
+            BRANCH_NAME == 'main' 
+            }       
+            
+            }
             steps {
                 echo 'Testing..'
             }
