--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,32 +1,4 @@
-pipeline {
-    agent any
-
-    stages {
-        stage('Build') {
-            steps {
-                echo 'Building..'
-            }
-        }
-        stage('Test') {
-            when {
-            expression{
-            BRANCH_NAME == 'main'  || BRANCH_NAME == 'master'
-            }       
-            
-            }
-            steps {
-                echo 'Testing..'
-            }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploying....'
-            }
-        }
-        post{
-             always{
-                  echo 'Post Always..'
-             }
-        }
-    }
+node {
+    checkout scm 
+    /* .. snip .. */
 }
