--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,10 @@
-node {
-    checkout scm 
-    /* .. snip .. */
+pipeline {
+    agent any
+    stages {
+        stage('Example') {
+            steps {
+                echo "Running ${env.BUILD_ID} on ${env.JENKINS_URL}"
+            }
+        }
+    }
 }
