--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,9 @@
-// Declarative //
-pipeline {
-agent { dockerfile true }
-stages {
-stage('Test') {
-steps {
-sh 'node --version'
+node {
+stage('Example') {
+if (env.BRANCH_NAME == 'main') {
+echo 'I only execute on the master branch'
+} else {
+echo 'I execute elsewhere'
 }
 }
 }
-}
-// Script //
